Se genero el script para consumir los servicios y mostrar informacion

--- a/html/bar.html
+++ b/html/bar.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Consulta de Cocteles</title>
+    <title>Cocteles | Bar 1001</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="icon" href="/img/cocktail.png">
 </head>
 <body>
     <div class="container">
+        <img width="150px" height="150px" src="/img/cocktail2.png" alt="">
         <h1>Bar 1001</h1>
         <h2>Consulta de cocteles</h2>
         <label for="cocktailName">Nombre del Coctel:</label>
